[package]
name = "lexit"
version = "0.1.2"
edition = "2024"
description = "A Lexical Analysis tool for defining a language and lexing it into tokens"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CBepler/lexer"
keywords = ["parser", "lexer", "compiler"]
categories = ["compilers", "parsing"]

[dependencies]
